# airscrapy

./: LICENCE  README.md  pyproject.toml
airscrapy/: airscrapy.py
src/: __init__.py
